--- a/index.html
+++ b/index.html
@@ -1,7 +1,83 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Projects made with Unreal Engine</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f4f4f4;
+            color: #333;
+        }
+        .header {
+            background: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        .project {
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            padding: 20px;
+            background: #fff;
+        }
+        .project img {
+            max-width: 100%;
+            height: auto;
+        }
+        .project-title {
+            color: #333;
+            font-size: 24px;
+            margin-top: 0;
+        }
+        .project-description {
+            color: #666;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="header">
+        <h1>Projects made with Unreal Engine</h1>
+    </div>
+    <div class="container">
+        <div class="project">
+		    <h2 class="project-title"><a href="https://store.steampowered.com/app/2509210/Blitz_Guard/" target="_blank">Blitz Guard</a></h2>
+		    <a href="https://store.steampowered.com/app/2509210/Blitz_Guard/" target="_blank">
+		        <iframe src="https://www.youtube.com/embed/iaoMjPsAuac" frameborder="0" allowfullscreen></iframe>
+		    </a>
+		    <p class="project-description">Souls like solo dev by me in my free time, free demo to play it. platform: PC, playable on steam deck (settings almost at minimum).</p>
+		</div>
+
+        <div class="project">
+		    <h2 class="project-title"><a href="https://store.steampowered.com/app/1466550/Did_You_Hear_That/" target="_blank">Did you hear that?</a></h2>
+		    <a href="https://store.steampowered.com/app/1466550/Did_You_Hear_That/" target="_blank">
+		        <img src="https://cdn.akamai.steamstatic.com/steam/apps/1466550/header.jpg?t=1688400266" alt="Did you hear that?">
+		    </a>
+		    <p class="project-description">An adventure game where you can only use your hearing sense because the other senses are neutralized. Visually impaired can play this game. platform: PC</p>
+		</div>
+
+        <div class="project">
+		    <h2 class="project-title"><a href="https://play.google.com/store/apps/details?id=com.pardovimes.ArgentumMobile&hl=es_US&gl=US" target="_blank">Argentum Mobile</a></h2>
+		    <a href="https://play.google.com/store/apps/details?id=com.pardovimes.ArgentumMobile&hl=es_US&gl=US" target="_blank">
+		        <img src="https://play-lh.googleusercontent.com/1l9FYozO-J27_dGpRaC_xrpjezGtTHxz-s66rVbUNVdi_m2nQcEjpAJlc_w-jmkflXau=w2560-h1440-rw" alt="Argentum Mobile">
+		    </a>
+		    <p class="project-description">Proof of concept of octopath traveller like game for android.</p>
+		</div>
+		
+        <div class="project">
+		    <h2 class="project-title"><a href="https://play.google.com/store/apps/details?id=com.pardovimes.lightsout&hl=es_US&gl=US" target="_blank">Lights out</a></h2>
+		    <a href="https://play.google.com/store/apps/details?id=com.pardovimes.lightsout&hl=es_US&gl=US" target="_blank">
+		        <img src="https://play-lh.googleusercontent.com/7I7hmrt6EUq2qqPqGwm3Ti_UbD-Pelwez0PIMoga1oEPQfKKT0VVkVyt4c7OEzBJEG_0=w2560-h1440-rw" alt="Lights out">
+		    </a>
+		    <p class="project-description">Lights out game for android.</p>
+		</div>
+    </div>
 </body>
 </html>
