--- a/vr-privacy-policy/privacy-policy.html
+++ b/vr-privacy-policy/privacy-policy.html
@@ -1,13 +1,36 @@
-Privacy Policy
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        h1 {
+            text-align: center;
+        }
+        p {
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Privacy Policy</h1>
 
-1. No Collection of Personal Data
-ShinoVR does not collect, store, or process any personal data from its users.
+    <p><strong>1. No Collection of Personal Data</strong><br>
+    ShinoVR does not collect, store, or process any personal data from its users.</p>
 
-2. Third-Party Services
-While we do not collect any data, the Meta Store or platform providers may collect certain information as part of their normal operations. Please refer to the Meta Privacy Policy for more details.
+    <p><strong>2. Third-Party Services</strong><br>
+    While we do not collect any data, the Meta Store or platform providers may collect certain information as part of their normal operations. Please refer to the Meta Privacy Policy for more details.</p>
 
-3. Changes to This Policy
-We reserve the right to update this Privacy Policy. Any changes will be posted within the game or on our website.
+    <p><strong>3. Changes to This Policy</strong><br>
+    We reserve the right to update this Privacy Policy. Any changes will be posted within the game or on our website.</p>
 
-4. Contact Us
-If you have any questions or concerns about this Privacy Policy, you can reach us at vimesentertainment@gmail.com.
+    <p><strong>4. Contact Us</strong><br>
+    If you have any questions or concerns about this Privacy Policy, you can reach us at <a href="mailto:vimesentertainment@gmail.com">vimesentertainment@gmail.com</a>.</p>
+</body>
+</html>
