--- a/index.html
+++ b/index.html
@@ -1,83 +1,107 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-<head>
-    <title>Projects made with Unreal Engine</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #f4f4f4;
-            color: #333;
-        }
-        .header {
-            background: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        .project {
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            padding: 20px;
-            background: #fff;
-        }
-        .project img {
-            max-width: 100%;
-            height: auto;
-        }
-        .project-title {
-            color: #333;
-            font-size: 24px;
-            margin-top: 0;
-        }
-        .project-description {
-            color: #666;
-        }
-    </style>
-</head>
-<body>
-    <div class="header">
-        <h1>Projects made with Unreal Engine</h1>
-    </div>
-    <div class="container">
-        <div class="project">
-		    <h2 class="project-title"><a href="https://store.steampowered.com/app/2509210/Blitz_Guard/" target="_blank">Blitz Guard</a></h2>
-		    <a href="https://store.steampowered.com/app/2509210/Blitz_Guard/" target="_blank">
-		        <iframe src="https://www.youtube.com/embed/iaoMjPsAuac" frameborder="0" allowfullscreen></iframe>
-		    </a>
-		    <p class="project-description">Souls like solo dev by me in my free time, free demo to play it. platform: PC, playable on steam deck (settings almost at minimum).</p>
-		</div>
+	<head>
+		<title>Pardo Vimes Portfolio</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-        <div class="project">
-		    <h2 class="project-title"><a href="https://store.steampowered.com/app/1466550/Did_You_Hear_That/" target="_blank">Did you hear that?</a></h2>
-		    <a href="https://store.steampowered.com/app/1466550/Did_You_Hear_That/" target="_blank">
-		        <img src="https://cdn.akamai.steamstatic.com/steam/apps/1466550/header.jpg?t=1688400266" alt="Did you hear that?">
-		    </a>
-		    <p class="project-description">An adventure game where you can only use your hearing sense because the other senses are neutralized. Visually impaired can play this game. platform: PC</p>
-		</div>
+		<!-- Header -->
+			<section id="header">
+				<div class="inner">
+					<img src="images/vent.png" class="img" style="width:3%;">
+					<h1>
+						Hi, I'm <strong>Carlos</strong>,
+						<br />a self-taught game developer.
+					</h1>
+					<p>Web developer by profession,<br />
+					Game developer with Unreal Engine in my free time.</p>
+					<ul class="actions special">
+						<li><a href="#three" class="button scrolly">Discover</a></li>
+					</ul>
+				</div>
+			</section>
 
-        <div class="project">
-		    <h2 class="project-title"><a href="https://play.google.com/store/apps/details?id=com.pardovimes.ArgentumMobile&hl=es_US&gl=US" target="_blank">Argentum Mobile</a></h2>
-		    <a href="https://play.google.com/store/apps/details?id=com.pardovimes.ArgentumMobile&hl=es_US&gl=US" target="_blank">
-		        <img src="https://play-lh.googleusercontent.com/1l9FYozO-J27_dGpRaC_xrpjezGtTHxz-s66rVbUNVdi_m2nQcEjpAJlc_w-jmkflXau=w2560-h1440-rw" alt="Argentum Mobile">
-		    </a>
-		    <p class="project-description">Proof of concept of octopath traveller like game for android.</p>
-		</div>
-		
-        <div class="project">
-		    <h2 class="project-title"><a href="https://play.google.com/store/apps/details?id=com.pardovimes.lightsout&hl=es_US&gl=US" target="_blank">Lights out</a></h2>
-		    <a href="https://play.google.com/store/apps/details?id=com.pardovimes.lightsout&hl=es_US&gl=US" target="_blank">
-		        <img src="https://play-lh.googleusercontent.com/7I7hmrt6EUq2qqPqGwm3Ti_UbD-Pelwez0PIMoga1oEPQfKKT0VVkVyt4c7OEzBJEG_0=w2560-h1440-rw" alt="Lights out">
-		    </a>
-		    <p class="project-description">Lights out game for android.</p>
-		</div>
-    </div>
-</body>
+			<section id="three" class="main style1 special">
+				<div class="container">
+					<header class="major">
+						<h2>Projects made with Unreal Engine</h2>
+					</header>
+					<div class="row gtr-150">
+						<div class="col-4 col-12-medium" style="margin-bottom: 75px;">
+		    				<a href="https://www.meta.com/en-gb/experiences/shinovr/8237768159682136/" target="_blank">
+								<span class="image fit"><img src="https://i.ytimg.com/vi/IBUXRQEf520/maxresdefault.jpg?sqp=-oaymwEmCIAKENAF8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGDcgUChyMA8=&rs=AOn4CLDLxnPWxJ4WBMRcVif_Ttzi4ZfvYw" alt="" /></span>
+								<h3 style="font-weight: bolder;">ShinoVR</h3>
+								<p>VR Game where you play as an aspiring shinobi. <br /> <br />platform: Quest.</p>
+								<ul class="actions special">
+									<li><a href="https://www.meta.com/en-gb/experiences/shinovr/8237768159682136/" target="_blank" class="button">Game page</a></li>
+									<li><a href="https://www.meta.com/en-gb/experiences/shinovr-demo/9064828336887474/" target="_blank" class="button">Demo page</a></li>
+								</ul>
+							</a>
+						</div>
+						<div class="col-4 col-12-medium" style="margin-bottom: 75px;">
+		    				<a href="https://store.steampowered.com/app/2509210/Blitz_Guard/" target="_blank">
+								<span class="image fit"><img src="https://i.ytimg.com/vi/iaoMjPsAuac/maxresdefault.jpg" alt="" /></span>
+								<h3 style="font-weight: bolder;">Blitz Guard</h3>
+								<p>Souls like solo dev by me in my free time, <b>free demo to play it</b>. <br /><br />platform: PC, playable on steam deck.</p>
+								<ul class="actions special">
+									<li><a href="https://store.steampowered.com/app/2509210/Blitz_Guard/" target="_blank" class="button">Steam page</a></li>
+								</ul>
+							</a>
+						</div>
+						<div class="col-4 col-12-medium" style="margin-bottom: 75px;">
+		    				<a href="https://store.steampowered.com/app/1466550/Did_You_Hear_That/" target="_blank">
+								<span class="image fit"><img src="https://cdn.akamai.steamstatic.com/steam/apps/1466550/header.jpg?t=1688400266" alt="" /></span>
+								<h3 style="font-weight: bolder;">Did you hear that?</h3>
+								<p>An adventure game where you can only use your hearing sense because the other senses are neutralized. Visually impaired can play this game. platform: PC</p>
+								<ul class="actions special">
+									<li><a href="https://store.steampowered.com/app/1466550/Did_You_Hear_That/" target="_blank" class="button">Steam page</a></li>
+								</ul>
+							</a>
+						</div>
+						<div class="col-4 col-12-medium" style="margin-bottom: 75px;">
+		    				<a href="https://vimesentertainment.itch.io/hyperion-project" target="_blank">
+								<span class="image fit"><img src="https://img.itch.zone/aW1hZ2UvNjA4MzQxLzM0NjY1ODEucG5n/original/wmK4q0.png" alt="" /></span>
+								<h3 style="font-weight: bolder;">Hyperion project</h3>
+								<p>Tactical Espionage But No Action. Only Stealth. Pure Stealth game. <br /><br /><b>Play for free on itch.io </b><br /><br />platform: PC, playable on steam deck.</p>
+								<ul class="actions special">
+									<li><a href="https://vimesentertainment.itch.io/hyperion-project" target="_blank" class="button">Itch.io page</a></li>
+								</ul>
+							</a>
+						</div>
+						<div class="col-4 col-12-medium" style="margin-bottom: 75px;">
+		    				<a href="https://play.google.com/store/apps/details?id=com.pardovimes.ArgentumMobile&hl=es_US&gl=US" target="_blank">
+								<span class="image fit"><img src="https://play-lh.googleusercontent.com/1l9FYozO-J27_dGpRaC_xrpjezGtTHxz-s66rVbUNVdi_m2nQcEjpAJlc_w-jmkflXau=w2560-h1440-rw" alt="" /></span>
+								<h3 style="font-weight: bolder;">Argentum Mobile</h3>
+								<p>Proof of concept of octopath traveller like game for mobile.<br /><br />platform: Android.</p>
+								<ul class="actions special">
+									<li><a href="https://play.google.com/store/apps/details?id=com.pardovimes.ArgentumMobile&hl=es_US&gl=US" target="_blank" class="button">Google Play</a></li>
+								</ul>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
+
+		<!-- Footer -->
+			<section id="footer">
+				<ul class="icons">
+					<li><a href="https://x.com/pardovimes" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.instagram.com/pardovimes/" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/pardovimes" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+				</ul>
+			</section>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
