--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<img src="images/vent.png" class="img" style="width:3%;">
+					<img src="images/vent.png" class="img" style="width:3%; min-width:90px;">
 					<h1>
 						Hi, I'm <strong>Carlos</strong>,
-						<br />a self-taught game developer.
+						<br  style="display: inline;" />a self-taught game developer.
 					</h1>
-					<p>Web developer by profession,<br />
+					<p>Web developer by profession,<br style="display: inline;" />
 					Game developer with Unreal Engine in my free time.</p>
 					<ul class="actions special">
 						<li><a href="#three" class="button scrolly">Discover</a></li>
