--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Projects made with Unreal Engine</h2>
+						<h2>Solo projects made with Unreal Engine</h2>
 					</header>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium" style="margin-bottom: 75px;">
